testsuite/tests/builtins/pattern_methods/is_match/both_pos_and_named/test.out
Error: Both positional and named value
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(p.is_match("Hello", haystack="Hello"))
   │       ──────────────────┬──────────────────  
   │                         ╰──────────────────── The parameter "haystack" has been provided a positional and a named value
───╯
